--- a/css/main.css
+++ b/css/main.css
@@ -612,13 +612,18 @@ footer {
   }
 }
 
-@media (max-width: 1450px) {
+/* @media (max-width: 1450px) {
   .card {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+    padding: 0.9rem;
   }
 
   .description-card {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+    padding: 0.8rem;
+  }
+  .description-text h4 {
+    font-size: 1.5rem;
   }
 
   #especialitats {
@@ -628,15 +633,17 @@ footer {
   #ortopedia {
     max-width: 90%;
   }
-}
 
-@media (max-width: 1024px) {
-
-  header {
+  .CTA {
     font-size: 0.9rem;
-    margin-left: 4.375rem;
-    margin-right: 3.438rem;
   }
+} */
+
+@media (max-width: 1450px) {
+
+   header {
+    font-size: 0.9rem;
+  } 
 
   nav ul li {
     margin: 0.8rem;
@@ -682,7 +689,7 @@ footer {
   }
 
   #especialitats {
-    max-width: 90%;
+    max-width: 85%;
   }
 
   .card {
