--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,111 @@ main {
   z-index: 1;
 }
 
+.delivery-container {
+  position: fixed;
+  bottom: 100px;
+  right: 50px;
+  background-color: #ff3cac;
+  background-image: linear-gradient(
+    225deg,
+    #ff3cac 0%,
+    #784ba0 50%,
+    #2b86c5 100%
+  );
+  cursor: pointer;
+  transition: all 0.2s;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #fff;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.delivery-container .borde-back {
+  width: 60px;
+  height: 60px;
+  background-color: rgba(248, 250, 252, 0.9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  box-shadow: none;
+}
+
+.delivery-container .icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  background-color: #ff3cac;
+  background-image: linear-gradient(
+    225deg,
+    #ff3cac 0%,
+    #784ba0 50%,
+    #2b86c5 100%
+  );
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+}
+
+.tooltip {
+  position: absolute;
+  top: -2;
+  right: calc(100% + 10px); /* Ajuste para que el tooltip salga por la izquierda */
+  z-index: -10;
+  transform: scaleX(0);
+  transform-origin: right center;
+  margin-right: 5px;
+  height: 50px;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.6s;
+  border-radius: 50px 0 0 50px;
+  background-color: #F4DFF3;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  padding-right: 16px;
+  color: #B11CAB;
+  font-size:0.8rem;
+  font-family: sans-serif;
+  font-weight: 800px;
+  padding-right: 30px;
+  padding-left: 20px;
+  margin-right: -25px;
+}
+
+.delivery-container:hover .tooltip {
+  transform: unset;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  z-index: -10;
+}
+
+.delivery-container:hover {
+  transform: translateX(-0px);
+  transition: 0.5s linear;
+}
+
+.delivery-container:hover .icon {
+  transform: rotate(360deg);
+  transition: 0.5s linear;
+}
+
+.delivery-container .icon img {
+  border: 8px solid #F4DFF3; /* Cambia el grosor del borde si es necesario */
+  border-radius: 50%; /* Mantiene la forma redonda de la imagen */
+}
+
 #hero {
   background-size: cover;
   background-position: center;
@@ -787,4 +892,4 @@ footer {
   .card {
     padding: 0.625rem;
   }
-} 
+}  
