--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ body {
   padding: 1.25rem;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 /* Estilos para el header */
 header {
   background-color: white;
@@ -81,7 +85,7 @@ main {
 
 .delivery-container {
   position: fixed;
-  bottom: 100px;
+  bottom: 80px;
   right: 50px;
   background-color: #ff3cac;
   background-image: linear-gradient(
@@ -101,6 +105,7 @@ main {
   fill: #fff;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.18);
+  z-index: 1;
 }
 
 .delivery-container .borde-back {
