--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,7 @@ main {
   padding-right: 30px;
   padding-left: 20px;
   margin-right: -25px;
+  font-weight: 600;
 }
 
 .delivery-container:hover .tooltip {
@@ -186,7 +187,7 @@ main {
   text-align: left;
   margin-left: 3.125rem;
   text-align: left;
-  margin-top: 5rem;
+  margin-top: 8rem;
 }
 
 #hero h2 {
